Finished styling cart and payment UI process.

--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -3,8 +3,8 @@
     z-index: 10;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: auto;
     background-color: var(--white);
     padding: var(--spacing-xl);
@@ -16,6 +16,13 @@
     align-items: center;
     font-size: var(--heading-size-xl);
     font-family: var(--heading-font-family);
+}
+
+.modal .modal-content {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
 }
 
 .modal .modal-close-btn {
