--- a/pages/cart/cart.css
+++ b/pages/cart/cart.css
@@ -18,14 +18,11 @@
     align-items: center;
 }
 
-.cart .cart-description-wrapper {
-    padding-left: 26px;
-}
-
 .cart .cart-quantity-wrapper {
     display: flex;
     flex-flow: column;
     align-items: center;
+    padding-right: 26px;
 }
 
 .cart .cart-quantity {
@@ -49,6 +46,21 @@
 
 .cart .cart-amount {
     padding-left: 30px;
+}
+
+.cart .empty-cart-container {
+    text-transform: lowercase;
+    align-self: center;
+    margin: var(--spacing-xxl);
+    padding: var(--spacing-xxl);
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart .empty-cart-message {
+    padding: var(--spacing-m);
 }
 
 @media (width >= 600px) {
