Added function to visually update cart quantity in header.

--- a/pages/cart/cart.css
+++ b/pages/cart/cart.css
@@ -57,6 +57,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .cart .empty-cart-message {
