Fixed payments modal to display quantity instead of it being removed.

--- a/utils/payments/payments.css
+++ b/utils/payments/payments.css
@@ -49,3 +49,7 @@
     cursor: pointer;
     border-radius: 6px;
 }
+
+.payments.modal .cart .cart-content-wrapper > .cart-quantity-wrapper button {
+    display: none;
+}
