Order wholesale code.

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -34,19 +34,16 @@
 
 .table table thead tr th:first-child {
     text-align: left;
-    border-right: 2px solid var(--blue);
 }
 
-.table table tbody tr th:first-child {
+.table table tbody tr th {
     text-align: left;
     border-right: 2px solid var(--blue);
 }
-
-.table table thead tr th:last-child {
-    width: 125px;
+.table table tbody tr th:last-of-type {
+    border-right: none;
 }
-
-.table table tbody tr th:last-child {
+.table table thead tr th:last-child {
     width: 125px;
 }
 
@@ -55,14 +52,14 @@
     border-bottom: 2px solid var(--blue);
 }
 
-.table table tbody tr td:first-child {
+.table table tbody tr td {
     border-right: 2px solid var(--blue);
     position: relative;
 }
 
-.table table tbody tr td:first-child h4 {
+/* .table table tbody tr td h4 {
     padding-right: var(--spacing-l);
-}
+} */
 
 .table table tbody tr td:first-child p:first-child {
     font-family: var(--heading-font-family);
@@ -105,6 +102,7 @@
     font-size: var(--heading-size-l);
     font-family: var(--heading-font-family);
     margin: 0;
+    border-right: none;
 }
 
 .table table tbody tr td:last-child input {
