--- a/pages/wholesale/wholesale.css
+++ b/pages/wholesale/wholesale.css
@@ -28,3 +28,7 @@
     color: var(--red);
     text-transform: lowercase;
 }
+
+/* TODO - apply this logic to how we are hiding items in payment cart screen :) */
+.wholesale-modal .cart .cart-content-wrapper > .cart-quantity-wrapper button {
+display: none;}
