--- a/blocks/highlight/highlight.css
+++ b/blocks/highlight/highlight.css
@@ -4,7 +4,7 @@
 }
 
 .highlight > div > div {
-    height: 525px;
+    height: 540px;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -18,6 +18,15 @@
 
 .highlight > div > div p {
     text-align: center;
+}
+
+.highlight > div > div p:nth-of-type(3):not(.button-wrapper) {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    background-color: aquamarine;
 }
 
 .highlight > div > div p.img-wrapper picture img {
