fixed icon sizes in cards.

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -46,6 +46,11 @@
   object-fit: contain;
 }
 
+.cards .cards-card-image .icon svg {
+  width: 120px;
+  height: 120px;
+}
+
 @media (width >= 600px) {
   .cards .cards-card-image,
   .cards .cards-card-image img {
