Added registered tm icon and fixed link color in label block on fill variants.

--- a/blocks/label/label.css
+++ b/blocks/label/label.css
@@ -25,6 +25,10 @@
     padding: 40px;
 }
 
+.label.fill > div > div a {
+    color: var(--white);
+}
+
 .label > div > div > h1,
 .label > div > div > div > h1 {
     font-size: 80px;
