--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -54,15 +54,10 @@
   grid-template-rows: auto;
   gap: 0 var(--spacing-s);
   max-width: 100%;
-  align-self: center;
-  justify-content: center;
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
 }
 
 .title > div > * {
-  align-self: end;
+  align-self: center;
 }
 
 .title .title-price {
@@ -97,10 +92,15 @@
   display: none;
 }
 
-.title .title-complex-price-container {
+.title .title-bundled-container {
   display: flex;
   flex-flow: column;
   text-align: right;
+  /* justify-content: center; */
+}
+
+.title .title-bundled-container h3 {
+  font-size: var(--heading-size-m);
 }
 
 @media (width >= 600px) {
@@ -138,6 +138,10 @@
     font-size: var(--body-size-s);
     display: unset;
     max-width: 80px;
+  }
+
+  .title .title-bundled-container h3 {
+    font-size: var(--heading-size-l);
   }
 }
 
