Added margin to the bottom of each card ul group so they arent too close to each other.

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -9,6 +9,7 @@
 @media (width >= 600px) {
   .cards > ul {
     grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    margin-bottom: 100px;
   }
 }
 
