--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,171 +1,162 @@
-.carousel-wrapper {
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
-.carousel {
-  position: relative;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-}
-
-.carousel .carousel-fixed-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  text-transform: lowercase;
-}
-
-.carousel .carousel-slides-container {
-  position: relative;
-}
-
-.carousel .carousel-slides,
-.carousel .carousel-slide-indicators {
-  list-style: none;
+main > .section > div.carousel-wrapper {
+  max-width: 100dvw;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
 
-.carousel .carousel-slides {
-  display: flex;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
-  overflow: scroll clip;
+.carousel {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
 }
 
-.carousel .carousel-slides::-webkit-scrollbar {
+.carousel > ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  overflow: scroll clip;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+
+.carousel > ul::-webkit-scrollbar {
   display: none;
 }
 
-.carousel .carousel-slide {
+.carousel ul > li {
   flex: 0 0 100%;
-  scroll-snap-align: start;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  scroll-snap-align: start;
   position: relative;
   width: 100%;
-  min-height: min(70vw, calc(100dvh - var(--header-height)));
+  height: calc(100dvh - var(--header-height) - var(--horizontal-spacing));
+  max-height: var(--site-width);
 }
 
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
-  align-items: center;
-}
-
-.carousel .carousel-slide:has(.carousel-slide-content[data-align='right']) {
-  align-items: flex-end;
-}
-
-.carousel .carousel-slide .carousel-slide-image picture {
+.carousel > ul > li picture {
   position: absolute;
   inset: 0;
 }
 
-.carousel .carousel-slide .carousel-slide-image picture>img {
+.carousel > ul > li picture > img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
-.carousel .carousel-slide .carousel-slide-content {
-  z-index: 1;
-  margin: 68px;
-  padding: 16px;
-  width: var(--slide-content-width, auto);
-}
-
-.carousel .carousel-slide-indicators {
+.carousel .carousel-overlay {
+  position: absolute;
+  inset: 0;
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
-  gap: 6px 12px;
-  padding: 12px;
-  line-height: 0;
+  text-align: center;
+  pointer-events: none;
+  transition: transform 0.3s, opacity 0.3s;
+  z-index: 1;
 }
 
-.carousel .carousel-slide-indicator button {
-  margin: 0;
-  padding: 0;
-  border-radius: 50%;
-  background-color: transparent;
+.carousel:hover .carousel-overlay {
+  opacity: 0;
+  transform: scale(2);
 }
 
-.carousel .carousel-navigation-buttons {
+.carousel .carousel-overlay h1 {
+  font-size: clamp(var(--heading-size-xxl), 11vw, 155px);
+}
+
+.carousel .carousel-overlay p {
+  font-size: clamp(var(--title-size-s), 4vw, var(--title-size-xxxl));
+}
+
+.carousel .carousel-overlay > div {
+  width: 100%;
+  padding: var(--horizontal-spacing);
+  padding-left: calc(var(--horizontal-spacing) + 44px);
+  padding-right: calc(var(--horizontal-spacing) + 44px);
+}
+
+.carousel .carousel-overlay svg {
+  position: absolute;
+  width: calc(100vw - (var(--horizontal-spacing) * 2) - 44px);
+  max-width: var(--site-width);
+  fill: var(--color-background);
+  stroke: var(--color-background);
+  color: var(--color-background);
+  opacity: 0.6;
+  transform: rotate(0);
+  z-index: -1;
+  animation: spin 39s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.carousel nav {
+  position: absolute;
+  inset: 0;
+}
+
+.carousel nav button.nav-arrow {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 12px;
-  right: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 1;
-}
-
-/* stylelint-disable-next-line no-descending-specificity */
-.carousel .carousel-navigation-buttons button {
-  position: relative;
-  width: 44px;
   height: 44px;
-  margin: 0;
+  width: 44px;
   border-radius: 50%;
-  padding: 0;
-  color: var(--blue);
-  background-color: var(--blue-light);
-  background-color: color-mix(in srgb, var(--blue-light) 25%, transparent);
-  transition: background-color 0.2s;
+  background-color: transparent;
+  color: var(--color-link);
+  opacity: 0.5;
+  transition: background-color 0.3s, color 0.3s, opacity 0.3s;
+  cursor: pointer;
+  z-index: 2;
 }
 
-.carousel .carousel-navigation-buttons button:hover,
-.carousel .carousel-navigation-buttons button:focus-visible {
-  background-color: var(--blue);
-  color: var(--white);
-}
-
-.carousel .carousel-navigation-buttons button::after {
+.carousel nav button.nav-arrow::after {
   display: block;
   content: '';
-  border: 2px solid;
+  border: var(--border-m) solid;
   border-bottom: 0;
   border-left: 0;
   height: 12px;
   width: 12px;
   position: absolute;
-  top: 50%;
   left: calc(50% + 2px);
   transform: translate(-50%, -50%) rotate(-135deg);
 }
 
-.carousel .carousel-navigation-buttons button.slide-next::after {
+.carousel nav button.nav-arrow-next::after {
   transform: translate(-50%, -50%) rotate(45deg);
   left: calc(50% - 2px);
 }
 
-@media (width >=600px) {
-  .carousel .carousel-fixed-content div h2 {
-    font-size: 150px;
-  }
+.carousel nav button.nav-arrow:first-of-type {
+  left: calc(var(--horizontal-spacing) / 2);
+}
 
-  .carousel .carousel-fixed-content div p {
-    font-size: 25px;
-  }
+.carousel nav button.nav-arrow:last-of-type {
+  right: calc(var(--horizontal-spacing) / 2);
+}
 
-  .carousel .carousel-navigation-buttons {
-    left: 24px;
-    right: 24px;
-  }
+.carousel:hover nav button.nav-arrow {
+  opacity: 1;
+  background-color: #fff3;
+}
 
-  .carousel .carousel-slide .carousel-slide-content {
-    --slide-content-width: calc((100% - 184px) / 2);
-
-    margin: 92px;
-  }
-
-  .carousel .carousel-slide .carousel-slide-content[data-align='justify'] {
-    --slide-content-width: auto;
-  }
+.carousel nav button.nav-arrow:hover,
+.carousel nav button.nav-arrow:focus {
+  background-color: var(--color-link);
+  color: var(--color-background);
 }
