fix: icon order swapping order

--- a/utils/order/order.css
+++ b/utils/order/order.css
@@ -14,7 +14,8 @@
     text-transform: lowercase;
 }
 
-.order img {
+.order .icon img,
+.order .icon svg {
     height: 250px;
     width: 250px;
     margin-bottom: var(--spacing-xxl);
