--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,6 @@ header {
   bottom: unset;
   padding: var(--spacing-xs);
   background-color: var(--color-background);
-  overflow-y: hidden;
   z-index: 10;
 }
 
@@ -14,8 +13,11 @@ header .header {
   margin: auto;
 }
 
-header a:any-link {
+header a:any-link,
+header button {
+  outline: 0;
   color: currentcolor;
+  text-decoration: none;
 }
 
 header ul {
@@ -79,7 +81,7 @@ header .nav-title .title-content a {
   padding: var(--spacing-xs);
   background-color: transparent;
   line-height: 0;
-  transition: background 0.1s, color 0.1s, transform 0.4s;
+  transition: background 0.1s, color 0.4s, transform 0.4s;
 }
 
 header .nav-title .title-content a:hover {
@@ -94,81 +96,74 @@ header .nav-sections {
   align-self: stretch;
   display: grid;
   width: 100%;
-  overflow-y: auto;
 }
 
 header .nav-sections nav {
   display: flex;
   height: 100%;
   align-items: stretch;
+  font-family: var(--heading-font-family);
+  font-size: var(--heading-size-xl);
+  text-align: center;
+  text-transform: lowercase;
 }
 
-header .nav-sections ul {
+header .nav-sections nav > ul {
   display: grid;
   grid-template-columns: 1fr;
   flex-grow: 1;
-  height: 100%;
-  font-size: var(--heading-size-xl);
-  font-family: var(--heading-font-family);
 }
 
-header .nav-sections ul li {
+header .nav-sections nav > ul li {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   overflow: hidden;
 }
 
-header .nav-sections nav > ul > li > a,
-header .nav-sections button,
-header .nav-sections button + ul > li a {
-  display: block;
+header .nav-sections nav > ul button,
+header .nav-sections nav > ul a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1ch;
   width: 100%;
-  padding: 0.3em 0.75em;
-  background-color: transparent;
-  text-align: center;
+  height: 100%;
+  color: var(--color-text);
   transition: transform 0.1s;
   cursor: pointer;
 }
 
-header .nav-sections nav ul li a:hover,
-header .nav-sections nav ul li a:focus,
-header .nav-sections button:hover,
-header .nav-sections button:focus {
-  background-color: transparent;
-  text-decoration: none;
+header .nav-sections nav > ul button:hover,
+header .nav-sections nav > ul button:focus {
+  outline: 0;
+}
+
+header .nav-sections nav > ul li button[aria-expanded='true'] {
+  background-color: var(--blue-lightest);
+}
+
+header .nav-sections nav > ul li button + ul {
+  display: none;
+}
+
+header .nav-sections nav > ul li button[aria-expanded='true'] + ul {
+  display: block;
+  background-color: var(--blue-lightest);
+  z-index: 1;
 }
 
 header .nav-sections nav ul li:nth-child(odd) a:hover,
-header .nav-sections nav ul li:nth-child(odd) a:focus {
+header .nav-sections nav ul li:nth-child(odd) a:focus,
+header .nav-sections nav ul li:nth-child(odd) button:hover,
+header .nav-sections nav ul li:nth-child(odd) button:focus {
   transform: scale(1.5) rotate(6.75deg);
 }
 
 header .nav-sections nav ul li:nth-child(even) a:hover,
-header .nav-sections nav ul li:nth-child(even) a:focus {
+header .nav-sections nav ul li:nth-child(even) a:focus,
+header .nav-sections nav ul li:nth-child(even) button:hover,
+header .nav-sections nav ul li:nth-child(even) button:focus {
   transform: scale(1.5) rotate(-6.75deg);
-}
-
-header .nav-sections button[aria-expanded='true'] {
-  background-color: var(--color-text);
-  color: var(--color-background);
-}
-
-header .nav-sections button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5ch;
-  padding-right: 0.5em;
-  white-space: nowrap;
-}
-
-header .nav-sections button + ul {
-  margin-top: 1ch;
-}
-
-header .nav-sections button + ul > li a {
-  display: block;
-  padding-left: calc(var(--spacing-m) + 0.75em);
 }
 
 header .nav-sections i.symbol-chevron {
@@ -184,10 +179,6 @@ header .nav-sections [aria-expanded='true'] i.symbol-chevron {
   transform: rotate(-180deg);
 }
 
-header .nav-sections [aria-expanded='false'] + ul {
-  display: none;
-}
-
 header .nav-sections i.symbol-chevron::after {
   top: 4px;
   left: 5.25px;
@@ -197,6 +188,12 @@ header .nav-sections i.symbol-chevron::after {
   border-left: 0;
   border-bottom: 0;
   transform: rotate(135deg);
+  transition: top 0.4s, left 0.4s;
+}
+
+header .nav-sections [aria-expanded='true'] i.symbol-chevron::after {
+  top: 1ch;
+  left: 1.5ch;
 }
 
 @media (width >= 900px) {
@@ -207,55 +204,24 @@ header .nav-sections i.symbol-chevron::after {
     font-size: var(--heading-size-l);
   }
 
-  header .nav-sections nav > ul > li > a,
-  header .nav-sections button,
-  header .nav-sections button + ul > li a {
-    padding: 0.75em;
+  header .nav-sections nav ul > li {
+    position: relative; 
+    flex-grow: 1;
+    overflow: visible;
   }
 
-  header .nav-sections nav ul li:nth-child(odd) a:hover,
-  header .nav-sections nav ul li:nth-child(odd) a:focus {
-    transform: scale(1.2) rotate(6.75deg);
-  }
-
-  header .nav-sections nav ul li:nth-child(even) a:hover,
-  header .nav-sections nav ul li:nth-child(even) a:focus {
-    transform: scale(1.2) rotate(-6.75deg);
-  }
-
-  header .nav-sections .subsection {
-    position: relative;
+  header .nav-sections nav > ul li button[aria-expanded='true'] {
+    background-color: transparent;
   }
   
-  header .nav-sections .subsection button + ul {
-    flex-direction: column;
-    gap: 0;
+  header .nav-sections nav > ul li button[aria-expanded='true'] + ul {
     position: absolute;
     top: 100%;
-    min-width: calc(100% + var(--horizontal-spacing));
-    border-radius: 0.5em;
-    padding: 0.5em 0;
-    background-color: var(--color-background);
-    box-shadow: var(--shadow-default);
+    padding: var(--spacing-m) 0;
   }
 
-  header .nav-sections .subsection button + ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    right: calc(var(--horizontal-spacing) + 0.3em);
-    width: 0;
-    height: 0;
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    border-bottom: 9px solid var(--color-background);
-    z-index: 2;
-  }
-
-  header .nav-sections .subsection button + ul > li a {
-    display: block;
-    border-radius: 0;
-    padding-left: 0.75em;
+  header .nav-sections nav > ul li button[aria-expanded='true'] + ul > li + li {
+    margin-top: var(--spacing-m);
   }
 }
 
