Added order flow updates, smoothed it out and added error handling in the credit card process.

--- a/utils/order/order.css
+++ b/utils/order/order.css
@@ -1,4 +1,5 @@
-.order .modal-wholesale-content-container {
+.order .modal-wholesale-content-container,
+.order .order-content-container {
     align-self: center;
     margin: var(--spacing-xxl);
     padding: var(--spacing-xxl);
