--- a/pages/wholesale/wholesale.css
+++ b/pages/wholesale/wholesale.css
@@ -2,14 +2,6 @@
    text-transform: lowercase;
 }
 
-.wholesale .default-content-wrapper:first-of-type {
-   display: flex;
-   justify-content: center;
-   flex-flow: column;
-   align-items: center;
-   height: 202px;
-}
-
 .wholesale .columns > div {
     display: flex;
     flex-flow: column;
@@ -67,25 +59,11 @@
 }
 
 .wholesale .wholesale-closed-container {
-    align-self: center;
-    margin: var(--spacing-xxl);
-    padding: var(--spacing-xxl);
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 450px;
-}
-
-@media (min-width: 900px) {
-    .wholesale .default-content-wrapper:first-of-type {
-        height: 84px;
-     }
-}
-
-@media (min-width: 1920px) {
-    .wholesale .wholesale-closed-container {
-        height: 600px;
-    }
+    height: 40vh;
+    padding: 0 var(--horizontal-spacing);
 }
