--- a/pages/wholesale/wholesale.css
+++ b/pages/wholesale/wholesale.css
@@ -67,3 +67,41 @@
     height: 40vh;
     padding: 0 var(--horizontal-spacing);
 }
+
+.wholesale .cart-card-wrapper {
+    margin: var(--spacing-xxl) 0;
+}
+
+.wholesale .cart-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 24px 0;
+}
+
+.wholesale .cart-price {
+    padding-left: 30px;
+}
+
+.wholesale .cart-content-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.wholesale .cart-quantity-wrapper {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding-right: 26px;
+}
+
+.wholesale .cart-total {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    margin-bottom: 12px;
+}
+
+.wholesale .cart-amount {
+    padding-left: 30px;
+}
