--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -48,6 +48,11 @@
   object-fit: contain;
 }
 
+.cards .cards-card-image .icon svg {
+  width: 120px;
+  height: 120px;
+}
+
 .cards .cards-card-body .icon svg {
   width: 20px;
   height: 20px;
