Updated padding on header menu drop down buttons.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -115,6 +115,7 @@ header .nav-sections nav > ul {
 }
 
 header .nav-sections nav > ul li {
+  padding: var(--spacing-m) 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -220,7 +221,7 @@ header .nav-sections [aria-expanded='true'] i.symbol-chevron::after {
   
   header .nav-sections nav > ul li button[aria-expanded='true'] + ul {
     position: absolute;
-    top: 68px;
+    top: 76px;
     padding: var(--spacing-m) 0;
     border: 2px solid var(--blue);
     border-radius: 0 0 12px 12px;
